Set white to default color

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -84,6 +84,9 @@
      <property name="singleStep">
       <double>1.000000000000000</double>
      </property>
+     <property name="value">
+      <double>255.000000000000000</double>
+     </property>
     </widget>
     <widget class="QDoubleSpinBox" name="ColorR">
      <property name="geometry">
@@ -103,6 +106,9 @@
      <property name="singleStep">
       <double>1.000000000000000</double>
      </property>
+     <property name="value">
+      <double>255.000000000000000</double>
+     </property>
     </widget>
     <widget class="QDoubleSpinBox" name="ColorG">
      <property name="geometry">
@@ -121,6 +127,9 @@
      </property>
      <property name="singleStep">
       <double>1.000000000000000</double>
+     </property>
+     <property name="value">
+      <double>255.000000000000000</double>
      </property>
     </widget>
     <widget class="QLabel" name="label">
@@ -163,7 +172,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="CanvasOpenGL" name="Canvas">
+   <widget class="CanvasOpenGL" name="Canvas" native="true">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -175,6 +184,13 @@
    </widget>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>CanvasOpenGL</class>
+   <extends>QWidget</extends>
+   <header>canvasopengl.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
