Add QColorDialog to chose color

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,9 +41,9 @@
    <widget class="QPushButton" name="ClearButton">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>440</y>
-      <width>80</width>
+      <x>640</x>
+      <y>445</y>
+      <width>71</width>
       <height>26</height>
      </rect>
     </property>
@@ -51,144 +51,43 @@
      <string>Clear</string>
     </property>
    </widget>
-   <widget class="QGroupBox" name="groupBox">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>0</y>
-      <width>90</width>
-      <height>160</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Color Selector</string>
-    </property>
-    <widget class="QDoubleSpinBox" name="ColorB">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>115</y>
-       <width>50</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="wrapping">
-      <bool>false</bool>
-     </property>
-     <property name="decimals">
-      <number>0</number>
-     </property>
-     <property name="maximum">
-      <double>255.000000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>1.000000000000000</double>
-     </property>
-     <property name="value">
-      <double>255.000000000000000</double>
-     </property>
-    </widget>
-    <widget class="QDoubleSpinBox" name="ColorR">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>40</y>
-       <width>50</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="decimals">
-      <number>0</number>
-     </property>
-     <property name="maximum">
-      <double>255.000000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>1.000000000000000</double>
-     </property>
-     <property name="value">
-      <double>255.000000000000000</double>
-     </property>
-    </widget>
-    <widget class="QDoubleSpinBox" name="ColorG">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>75</y>
-       <width>50</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="decimals">
-      <number>0</number>
-     </property>
-     <property name="maximum">
-      <double>255.000000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>1.000000000000000</double>
-     </property>
-     <property name="value">
-      <double>255.000000000000000</double>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>15</x>
-       <y>44</y>
-       <width>21</width>
-       <height>18</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>R:</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>15</x>
-       <y>79</y>
-       <width>21</width>
-       <height>18</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>G:</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>15</x>
-       <y>118</y>
-       <width>21</width>
-       <height>18</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>B:</string>
-     </property>
-    </widget>
-   </widget>
    <widget class="CanvasOpenGL" name="Canvas" native="true">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>600</width>
-      <height>460</height>
+      <x>0</x>
+      <y>0</y>
+      <width>721</width>
+      <height>481</height>
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="changeColor">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>365</y>
+      <width>71</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string>CHANGE
+COLOR</string>
+    </property>
+   </widget>
+   <zorder>Canvas</zorder>
+   <zorder>ClearButton</zorder>
+   <zorder>changeColor</zorder>
   </widget>
  </widget>
  <customwidgets>
   <customwidget>
    <class>CanvasOpenGL</class>
    <extends>QWidget</extends>
-   <header>canvasopengl.h</header>
+   <header>canvasOpenGL.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
