Add gouraud shading (only diffuse)

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -628,7 +628,7 @@ COLOR</string>
     </item>
     <item>
      <property name="text">
-      <string>Gourad</string>
+      <string>Gouraud</string>
      </property>
     </item>
     <item>
